Hopefully fixing the release script..

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: otdr-fixer
+name: Rust releases
 
 on:
   push:
@@ -20,16 +20,16 @@ jobs:
         include:
           - name: linux
             os: ubuntu-latest
-            artifact_name: target/release/<name>
-            asset_name: <name>-linux
+            artifact_name: target/release/otdr-fixer
+            asset_name: otdr-fixer-linux
           - name: windows
             os: windows-latest
-            artifact_name: target/release/<name>.exe
-            asset_name: <name>-windows
+            artifact_name: target/release/otdr-fixer.exe
+            asset_name: otdr-fixer-windows
           - name: macos
             os: macos-latest
-            artifact_name: target/release/<name>
-            asset_name: <name>-macos
+            artifact_name: target/release/otdr-fixer
+            asset_name: otdr-fixer-macos
 
     steps:
       - uses: actions/checkout@v1
